feat:cahnge mobile image

--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
           justify-content: center;
           padding-top: 2rem;
           background-repeat: no-repeat;
-        }
+          
+        background-image: url("mobile.jpeg");
+       }
 
         .card {
           padding: 1rem;
