fix:change width

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         border-radius: 5px;
         margin: 0;
         width: 100%;
-        max-width: 300px;
+        max-width: 470px;
       }
 
       .navigator {
@@ -194,8 +194,9 @@
           justify-content: center;
           padding-top: 2rem;
           background-repeat: no-repeat;
-          
-        background-image: url("mobile.jpeg");
+           background-size:cover;
+
+        background-image: url("mobile.jpeg"); 
        }
 
         .card {
